--- a/PI III bruno gay/PI III/PI III.csproj
+++ b/PI III bruno gay/PI III/PI III.csproj
@@ -50,7 +50,13 @@
     <Compile Include="Janela_Principal.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Janela_Principal.Fila.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Janela_Principal.Guiches.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Janela_Principal.Setup.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
