--- a/PI III bruno gay/PI III/PI III.csproj
+++ b/PI III bruno gay/PI III/PI III.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Janela_Principal.Setup.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Janela_Principal.Turnos.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Teste.cs">
