--- a/PI III bruno gay/PI III/PI III.csproj
+++ b/PI III bruno gay/PI III/PI III.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Janela_Principal.Turnos.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Pessoas.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Teste.cs">
