criando uma classe Processo para trabalhar a área de processos mais nela e assim deixar mais organizado

--- a/PI III/PI III/PI III.csproj
+++ b/PI III/PI III/PI III.csproj
@@ -57,6 +57,9 @@
     <Compile Include="Janela_Principal.Guiches.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Janela_Principal.Processo.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Janela_Principal.Setup.cs">
       <SubType>Form</SubType>
     </Compile>
