Criada mais uma classe parcial com a finalidade de fazer trocas, ainda está em construção

--- a/PI III/PI III/PI III.csproj
+++ b/PI III/PI III/PI III.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Janela_Principal.Setup.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Janela_Principal.Trocas.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Janela_Principal.Turnos.cs">
       <SubType>Form</SubType>
     </Compile>
