--- a/TesteFormulas/TesteFormulas/TesteFormulas.csproj
+++ b/TesteFormulas/TesteFormulas/TesteFormulas.csproj
@@ -56,12 +56,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constantes.cs" />
     <Compile Include="GuichesSetup.cs" />
     <Compile Include="Pessoas.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Program.Processo.cs" />
     <Compile Include="Program.Setup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trocas.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
