--- a/PI III/PI III/PI III.csproj
+++ b/PI III/PI III/PI III.csproj
@@ -80,6 +80,9 @@
     <Compile Include="VerticalProgressBar.cs">
       <SubType>Component</SubType>
     </Compile>
+    <EmbeddedResource Include="Janela_Principal.resx">
+      <DependentUpon>Janela_Principal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -88,6 +91,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Teste.resx">
       <DependentUpon>Teste.cs</DependentUpon>
@@ -108,6 +112,30 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1493335334_icon-play.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1493335334_icon-play1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1493335427_fast-forward.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1493339249_pause.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Imagens\PI IIIwpp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Imagens\2x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Imagens\3x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Imagens\10x.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
