adicionando com estatisticas por comb ainda n terminado

--- a/PI III/PI III/PI III.csproj
+++ b/PI III/PI III/PI III.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Constantes.cs" />
     <Compile Include="Estatistica.cs" />
+    <Compile Include="EstatisticaComb.cs" />
     <Compile Include="GuichesSetup.cs" />
     <Compile Include="Janela_Principal.Barra_Menu.cs">
       <SubType>Form</SubType>
